* fix theme loading from JSON * CLI fixes